fixes issues with forgotten pw alignment.

--- a/src/app/components/body/passwordrecovery/passwordrecovery.component.scss
+++ b/src/app/components/body/passwordrecovery/passwordrecovery.component.scss
@@ -1,3 +1,16 @@
-.form-gap {
-  padding-top: 70px;
+
+
+#outer {
+  margin-top: 6em;
+  width: 100%;
+  align-content: center;
+}
+#forgotpw{
+  width: 25%;
+  margin: 0 auto;
+  display: block;
+  border-style: solid;
+  border-radius: 20px;
+  border-width: thin;
+
 }
